# fastapi-sqlalchemy-alembic-demo

./: .env.sample  .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 096ed12131a5_define_project_and_task_table.py  deddd6abb7f7_define_project_and_task_table.py
src/: applications.py  config.py  dependencies.py  main.py  models.py  repositories.py
src/applications/: base.py  project.py  task.py
src/models/: base.py  project.py  task.py
src/repositories/: project.py  task.py
src/routers/: projects.py  tasks.py
