[tool.poetry]
name = "fastapi-sqlalchemy-alembic-demo"
version = "0.1.0"
description = ""
authors = ["chanybou0311 <chanyou0311@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
